fix: align TFR screens and connect recruitment controls
Connect recruitment, political choices and tension views to private snapshots. Center layered icons against outer artwork, align controls and resize event dialogs at GUI 2. Validation: test runGameTest remapJar passed with actual renderer fixtures; operational multiplayer was not exercised.